<?xml version="1.0"?>
<package format="2">
  <name>ompl_near_projection</name>
  <version>0.0.0</version>
  <description>The ompl_near_projection package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ompl</depend>

</package>
